Fix social link spacing

--- a/themes/leon-overweel-com/static/css/main.css
+++ b/themes/leon-overweel-com/static/css/main.css
@@ -83,13 +83,16 @@ a:hover {
     padding-right: 1rem;
 }
 
+.social {
+    display: flex;
+}
+
 .social > a {
     text-decoration: none;
-    display: inline-block;
 }
 
 .social > a > div {
-    margin: 0.5rem 0.2rem 0 0;
+    margin: 0.5rem 0.5rem 0 0;
     background-color: #f2f4f9;
     padding: 0.3rem 1rem 0.4rem 1rem;
     border-radius: 0.7rem;
